Add module required by usb4java to JavaExec task